@@ -32,3 +32,7 @@ CHANGES
 - Skip auto-generation of Content-Type header #507
 
 - Use sendfile facility for static file handling #503
+
+- Default `response_factory` in `app.router.add_static` now is
+  `StreamResponse`, not `None`. The functionality is not changed if
+  default is not specified.
